        * inst/include/Rcpp/module/Module_generated_function.h: Idem
        * inst/include/Rcpp/module/Module_generated_get_signature.h: Idem
	* inst/include/Rcpp/generated/Language__ctors.h: Idem
	* inst/include/Rcpp/generated/DataFrame_generated.h: Idem
	* inst/include/Rcpp/generated/Pairlist__ctors.h: Idem
	* inst/include/Rcpp/generated/InternalFunction__ctors.h: Idem

2025-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/platform/compiler.h: Simplified and shortened
	establishing C++11 as baseline; further PRs to complete this
	* inst/include/Rcpp/String.h: Unconditionally use std::hash with C++11
	* inst/include/Rcpp/wrap.h: Unconditionally use static_assert
	* inst/include/Rcpp/sugar/functions/sapply.h: Use std::result_of
	(with C++11 or C++14) or std::invoke_result (C++17 or later)
	* inst/include/Rcpp/sugar/functions/table.h: Use std::map
	* inst/include/Rcpp/sugar/sets.h: Use std::unordered_{set,map}
	* man/evalCpp.Rd: Update example
	* src/api.cpp: Simplify rcpp_capabilities assignment

2025-03-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/Environment.h: Switch from R_lsInternal to
	R_lsInternal3 as the former is now outlawed

2025-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Function.h: Use R_ClosureEnv instead of
	deprecated CLOENV if under R >= 4.5.0

2025-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* src/barrier.cpp (dataptr): Replace remaining DATAPTR with
	DATAPTR_RO for suitable R greater than 3.5.0

2025-02-11  Dirk Eddelbuettel  <edd@debian.org>
