@@ -1120,7 +1120,6 @@ public:
         return Vector( 0 ) ;
     }
 
-    //    #if defined(HAS_VARIADIC_TEMPLATES)
 public:
     template <typename... T>
     static Vector create(const T&... t){
